maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:5: warning: enclosing method isWallAtLeft has result type Unit: return value discarded
  return answer;
  ^WallFollowerMaze:12: error: value unary_! is not a member of Unit
      if (!isWallAtLeft()) { // gestion case 2
          ^WallFollowerMaze:15: error: value unary_! is not a member of Unit
        if (!isWallAtLeft()) { // gestion case 3
            ^